toolchain/internal/core/analysis/testdata/errors/patterns/invalid_placeholder_name.vdl
// @expect: E402

pattern Invalid = "events.{123invalid}"
